--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 body {
-    background-color: cadetblue;
-    color: darkblue;
+    background-color: rgb(111, 90, 146);
+    color: rgb(97, 234, 106);
 }
-
+p{
+    color: aqua;
+}
 h1,h2 {
     text-align: center;
+    font-style: italic;
 }
 
 .container{
